# smbx38a-teascript-vscode-support

./: .gitignore  .vscodeignore  LICENSE  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
.ai/: README.md  architecture.md  development.md  lsp-and-extension.md  meta-grammar.md  tea-context.md  tea-grammar.md
.src-docs/: Advset (TeaScript).md  Autorun Events.md  BGO (TeaScript).md  BGP (TeaScript).md  BSet (TeaScript).md  Bitmap (TeaScript).md  Block (TeaScript).md  Char (TeaScript).md  Custom Extra Scripts (TeaScript).md  Declarations.md  Editor Functions.md  Effect (TeaScript).md  Functions (TeaScript).md  Hidden Functions (TeaScript).md  Iterators.md  LVLTimer (TeaScript).md  Liquid (TeaScript).md  NPC (TeaScript).md  README.md  Section (TeaScript).md  Special Layers.md  Sysval (TeaScript).md  TeaScript Submissions.md  TeaScript Syntax.md  Text (TeaScript).md  Tip of the Day.md  Warp (TeaScript).md
.src-docs/wiki/: Advset (TeaScript).wiki  Autorun Events.wiki  BGO (TeaScript).wiki  BGP (TeaScript).wiki  BSet (TeaScript).wiki  Bitmap (TeaScript).wiki  Block (TeaScript).wiki  Char (TeaScript).wiki  Custom Extra Scripts (TeaScript).wiki  Declarations.wiki  Editor Functions.wiki  Effect (TeaScript).wiki  Functions (TeaScript).wiki  Hidden Functions (TeaScript).wiki  Iterators.wiki  LVLTimer (TeaScript).wiki  Liquid (TeaScript).wiki  NPC (TeaScript).wiki  Section (TeaScript).wiki  Special Layers.wiki  Sysval (TeaScript).wiki  TeaScript Submissions.wiki  TeaScript Syntax.wiki  Text (TeaScript).wiki  Tip of the Day.wiki  Warp (TeaScript).wiki
client/: package-lock.json  package.json  tsconfig.json
client/src/: extension.ts
client/src/syntaxes/: meta-grammar.ts  tea-context.ts  tea-grammarparttern.ts
res/readmeImgs/: SMBX 2D 风格化伪阴影实验.elvl
res/scriptCombineTool/: Program.cs  TMakeList.txt
res/smbx-38a-starter/: .gitignore  CMakeLists.txt  Config.cmake  Readme.md  vcpkg.json
res/smbx-38a-starter/icon/: icon.rc.in
res/smbx-38a-starter/rc/: .gitignore  CMakeLists.txt  LICENSE  README.md
res/smbx-38a-starter/sources/: main.cpp  xx.cpp
res/smbx-38a-starter/sources/private/: main_content.h
res/smbx-38a-starter/src/: main.cpp
res/smbx-38a-starter/src/private/: main-content.h  popup.cpp  popup.h
scripts/: package-vsix.js
server/: package-lock.json  package.json  tsconfig.json
server/src/: grammar_repository.ts  meta-grammar.ts  server.ts  tea-context.ts  tea-grammarparttern.ts  tea-matchfunctions.ts  tea-treebuilder.ts
server/src/syntaxes/: meta-grammar.ts  tea-buildincontext.ts  tea-builtin-context.ts  tea-context.ts  tea-grammar-pattern.ts  tea-grammarparttern.ts  tea-matchfunctions.ts  tea-treebuilder.ts
snippets/: smbxtea.json
src/: extension.ts
syntaxes/: smbxtea.tmLanguage.json  vbs.tmLanguage
test/: README.md  helpers.js  run-tests.js
test/cases/: 01-tea-context.test.js  02-meta-grammar.test.js  03-grammar-correct.test.js  04-grammar-error.test.js  05-performance.test.js  06-real-world.test.js  07-oneline-if.test.js
test/example/: Decoder.smt  TextboxLiteUtil.smt  TextboxLowLevelUtil.smt  TextboxMsg.smt  bmp_utils.smt  cumath_utils.smt  line_utils.smt  model_slices.smt  pool_utils.smt  shadow2d.smt  textbox_utils.smt  wind-line.smt
